<package>
  <name>jr_demo</name>
  <version>0.0.0</version>

  <description>Jackrabbot Test Repository</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jr_demo</url>
  <url type="bugtracker">https://github.com/pirobot/jr_demo/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>












