<?xml version="1.0"?>
<package>
  <name>jr_msgs</name>
  <version>0.0.0</version>
  <description>The jr_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <maintainer email="ccruise@stanford.edu">Chris Joseph Cruise</maintainer>
  <maintainer email="amirabs@stanford.edu">Amir Abbas Sadeghian</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/amirabs/JackRabbot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs/</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  
</package>